[package]
name = "net-con"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-service = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros", "time", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_core = "0.6"
futures = "0.3.31"

